2009-01-31  Glenn Morris  <rgm@gnu.org>

	* gnus-sum.el (gnus-summary-next-article): XEmacs-friendly version of
	2009-01-09 change.

2009-01-26  Teodor Zlatanov  <tzlatanov@jumptrading.com>

	* auth-source.el (auth-source-forget-user-or-password): Clarify docs.
	(auth-source-forget-all-cached): New convenience function.
	(auth-source-user-or-password): Accept list of modes or a single mode.

	* mail-source.el (mail-source-bind, mail-source-set-1): Use list of
	auth-source modes.

	* nnimap.el (nnimap-open-connection): Use list of
	auth-source modes.

	* nntp.el (nntp-send-authinfo): Use list of
	auth-source modes.

2009-01-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el (nntp-send-authinfo): 

2009-01-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Update docs to reflect epa-file-enable is to be used
	now.

2009-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-pathname-coding-system): Default to the `file-name'
	coding system in XEmacs; add a workaround for XEmacs.

2009-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-priorities): Protect against nil value
	of current-language-environment.

2009-01-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnfolder.el (nnfolder-read-folder): Check if most-positive-fixnum is
	available at runtime.

2009-01-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut): Fix end point of narrowing.

2009-01-11  Aidan Kehoe  <kehoea@parhasard.net>

	* nnfolder.el (nnfolder-read-folder): The (lsh -1 -1) trick to generate
	the greatest positive fixnum value doesn't work under an XEmacs with
	bignum support; use the most-positive-fixnum constant instead,
	available since Emacs 21.1 with cl and XEmacs 21.1.

2009-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-next-article): Revert last change by which
	XEmacs gets not to work.

2009-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-priorities): Allow the value like